[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/main_menu/options.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/music/LetsFun.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 100
custom_constants/margin_left = 120
custom_constants/margin_bottom = 100
script = ExtResource( 3 )
_music = ExtResource( 4 )

[node name="Main" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 171.0
margin_right = 904.0
margin_bottom = 429.0
size_flags_vertical = 4
custom_constants/separation = 10

[node name="Name" type="Label" parent="Main"]
margin_left = 345.0
margin_right = 438.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Mech Manager"

[node name="Logo" type="TextureRect" parent="Main"]
margin_left = 360.0
margin_top = 24.0
margin_right = 424.0
margin_bottom = 88.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="Main"]
margin_top = 98.0
margin_right = 784.0
margin_bottom = 108.0
custom_constants/separation = 10
custom_styles/separator = SubResource( 1 )

[node name="Start" type="Button" parent="Main"]
margin_left = 347.0
margin_top = 118.0
margin_right = 437.0
margin_bottom = 138.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Start"

[node name="Continue" type="Button" parent="Main"]
margin_left = 347.0
margin_top = 148.0
margin_right = 437.0
margin_bottom = 168.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Continue"

[node name="Options" type="Button" parent="Main"]
margin_left = 347.0
margin_top = 178.0
margin_right = 437.0
margin_bottom = 198.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Options"

[node name="Credits" type="Button" parent="Main"]
margin_left = 347.0
margin_top = 208.0
margin_right = 437.0
margin_bottom = 228.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Credits"

[node name="Quit" type="Button" parent="Main"]
margin_left = 347.0
margin_top = 238.0
margin_right = 437.0
margin_bottom = 258.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Quit"

[node name="ReallyQuit" type="Button" parent="Main"]
visible = false
margin_left = 347.0
margin_top = 268.0
margin_right = 437.0
margin_bottom = 288.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 4
text = "Really Quit?"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
margin_left = 120.0
margin_top = 184.0
margin_right = 904.0
margin_bottom = 416.0
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="AudioLabel" type="Label" parent="Options"]
margin_right = 784.0
margin_bottom = 14.0
text = "Audio"
align = 1

[node name="MasterBus" type="HBoxContainer" parent="Options"]
margin_top = 18.0
margin_right = 784.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Options/MasterBus"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Master"

[node name="HSlider" type="HSlider" parent="Options/MasterBus"]
margin_left = 64.0
margin_right = 784.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="MusicBus" type="HBoxContainer" parent="Options"]
margin_top = 38.0
margin_right = 784.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Options/MusicBus"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Music"

[node name="HSlider" type="HSlider" parent="Options/MusicBus"]
margin_left = 64.0
margin_right = 784.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="SoundBus" type="HBoxContainer" parent="Options"]
margin_top = 58.0
margin_right = 784.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="Options/SoundBus"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Sound"

[node name="HSlider" type="HSlider" parent="Options/SoundBus"]
margin_left = 64.0
margin_right = 784.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="HSeparator" type="HSeparator" parent="Options"]
margin_top = 78.0
margin_right = 784.0
margin_bottom = 88.0
custom_constants/separation = 10

[node name="VideoLabel" type="Label" parent="Options"]
margin_top = 92.0
margin_right = 784.0
margin_bottom = 106.0
text = "Video"
align = 1

[node name="Fullscreen" type="CheckButton" parent="Options"]
margin_top = 110.0
margin_right = 784.0
margin_bottom = 150.0
text = "Fullscreen"

[node name="Vsync" type="CheckButton" parent="Options"]
margin_top = 154.0
margin_right = 784.0
margin_bottom = 194.0
text = "Vsync"

[node name="HSeparator2" type="HSeparator" parent="Options"]
margin_top = 198.0
margin_right = 784.0
margin_bottom = 208.0
custom_constants/separation = 10

[node name="Button" type="Button" parent="Options"]
margin_top = 212.0
margin_right = 42.0
margin_bottom = 232.0
size_flags_horizontal = 0
text = "Back"

[node name="CreditsPopup" type="PopupPanel" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 904.0
margin_bottom = 500.0

[node name="MarginContainer" type="MarginContainer" parent="CreditsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Credits" type="RichTextLabel" parent="CreditsPopup/MarginContainer"]
margin_top = 158.0
margin_right = 776.0
margin_bottom = 233.0
size_flags_horizontal = 5
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]Moowool

PoignantBanana

Valentino[/center]"
text = "Moowool

PoignantBanana

Valentino"
fit_content_height = true
scroll_active = false

[node name="Hide" type="Button" parent="CreditsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 0
flat = true

[connection signal="visibility_changed" from="Main" to="Main/Quit" method="show"]
[connection signal="visibility_changed" from="Main" to="Main/ReallyQuit" method="hide"]
[connection signal="pressed" from="Main/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Main/Options" to="Main" method="hide"]
[connection signal="pressed" from="Main/Options" to="Options" method="show"]
[connection signal="pressed" from="Main/Credits" to="CreditsPopup" method="popup"]
[connection signal="pressed" from="Main/Quit" to="Main/Quit" method="hide"]
[connection signal="pressed" from="Main/Quit" to="Main/ReallyQuit" method="show"]
[connection signal="pressed" from="Main/ReallyQuit" to="." method="_on_ReallyQuit_pressed"]
[connection signal="value_changed" from="Options/MasterBus/HSlider" to="Options" method="_on_Master_value_changed"]
[connection signal="value_changed" from="Options/MusicBus/HSlider" to="Options" method="_on_Music_value_changed"]
[connection signal="value_changed" from="Options/SoundBus/HSlider" to="Options" method="_on_Sound_value_changed"]
[connection signal="toggled" from="Options/Fullscreen" to="Options" method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Options/Vsync" to="Options" method="_on_Vsync_toggled"]
[connection signal="pressed" from="Options/Button" to="Main" method="show"]
[connection signal="pressed" from="Options/Button" to="Options" method="hide"]
[connection signal="button_down" from="CreditsPopup/Hide" to="CreditsPopup" method="hide"]
